kubernetes/network-policies/istio-ingress-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress-dns-egress
  namespace: istio-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: istio-ingress-gateway
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress-istiod-egress
  namespace: istio-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: istio-ingress-gateway
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              app: istiod
      ports:
        - protocol: TCP
          port: 15012
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress-external-ingress
  namespace: istio-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: istio-ingress-gateway
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress-egress-to-default-services
  namespace: istio-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: istio-ingress-gateway
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              app: nginx-gateway
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              app: ext-authz
      ports:
        - protocol: TCP
          port: 9002
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              app: session-gateway
      ports:
        - protocol: TCP
          port: 8081
